--- a/stack.yaml
+++ b/stack.yaml
@@ -1,7 +1,8 @@
-resolver: lts-12.9
+resolver: lts-12.10
 
-extra-deps: [base-noprelude-4.11.1.0]
+extra-deps:
+  - base-noprelude-4.11.1.0
+  - relude-0.3.0
 
 ghc-options:
   "$locals": -fhide-source-paths
-
