--- a/treasure-keeper.cabal
+++ b/treasure-keeper.cabal
@@ -44,6 +44,7 @@ library
   default-language:    Haskell2010
   default-extensions:  ConstraintKinds
                        DeriveGeneric
+                       DerivingStrategies
                        GeneralizedNewtypeDeriving
                        LambdaCase
                        OverloadedStrings
