--- a/treasure-keeper.cabal
+++ b/treasure-keeper.cabal
@@ -23,7 +23,7 @@ source-repository head
 library
   hs-source-dirs:      src
 
-  exposed-modules:     TreasureKeeper
+  exposed-modules:     Treasure
                            Treasure.Core.Record
                            Treasure.Core.Account
                            Treasure.Tui
@@ -32,7 +32,7 @@ library
 
   build-depends:       base-noprelude >= 4.11 && < 5
                      , brick ^>= 0.41
-                     , lens ^>= 4.17
+                     , microlens ^>= 0.4
                      , relude ^>= 0.3.0
                      , text
                      , vty ^>= 5.24
